Acrescentando campo para data de referência, a ser usado para ordenar a consulta
